src/objects/peer__Disbursement_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>peer__ACH_Reversal_File_Name__c</fullName>
        <label>ACH Reversal File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>peer__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Bank_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>loan__Bank_Account__c</referenceTo>
        <relationshipLabel>Disbursement Schedule</relationshipLabel>
        <relationshipName>Disbursement_Schedule</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Bank_Reference__c</fullName>
        <label>Bank Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Bank_Statement_Date__c</fullName>
        <label>Bank Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>peer__Bank_Statement_Exception__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Statement Exception</label>
        <referenceTo>peer__Bank_Recon_Exception__c</referenceTo>
        <relationshipLabel>Disbursement Schedule</relationshipLabel>
        <relationshipName>Disbursement_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Loan_Account__c</fullName>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Disbursement Schedule</relationshipLabel>
        <relationshipName>Disbursement_Schedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>peer__Loan_Disbursal_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Disbursal Transaction</label>
        <referenceTo>loan__Loan_Disbursal_Transaction__c</referenceTo>
        <relationshipLabel>Disbursement Schedule</relationshipLabel>
        <relationshipName>Disbursement_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Name_of_Entity__c</fullName>
        <label>Name of Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Reference__c</fullName>
        <label>Reference</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this disbursement schedule has been reversed.</description>
        <inlineHelpText>If true, this disbursement schedule has been reversed.</inlineHelpText>
        <label>Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Sent_To_ACH_On__c</fullName>
        <label>Sent To ACH On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>peer__Sent_To_ACH_On_for_Reversal__c</fullName>
        <label>Sent To ACH On for Reversal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>peer__Sent_To_ACH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent To ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Sent_To_ACH_for_Reversal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent To ACH for Reversal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Verified_From_Bank_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified From Bank Statement</label>
        <type>Checkbox</type>
    </fields>
    <label>Disbursement Schedule</label>
    <listViews>
        <fullName>peer__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DST-{000000000}</displayFormat>
        <label>Disbursement Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursement Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>